<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btnBackToHomeScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow"
                android:backgroundTint="@color/orange"
                android:layout_marginEnd="20dp"
                android:tooltipText="@string/back_to_home"
                android:contentDescription="@string/add_task" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:gravity="center">

        <EditText
            android:id="@+id/taskNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="task_name"
            android:ems="10"
            android:hint="@string/task_name"
            android:inputType="text"
            android:labelFor="@id/taskNameInput"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColorHint="@color/gray"
            tools:targetApi="p" />

        <EditText
            android:id="@+id/taskDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="task_name"
            android:ems="10"
            android:hint="@string/task_description"
            android:inputType="text"
            android:labelFor="@id/taskDescriptionInput"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColorHint="@color/gray" />

        <Button android:id="@+id/btnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/add_task"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="android:text"/>

    </LinearLayout>


</LinearLayout>